# bg2feed

./: .gitignore  README.md  bg2calibre.recipe  requirements.txt  setup.cfg  setup.py
bg2feed/: api.py  parser.py
bg2feed/templates/: template.html
