[metadata]
name = bg2feed
summary = Boston Globe to Atom Feed
description-file =
    README.md
author = Kristi Nikolla
author-email = kristi@nikolla.me
home-page = https://github.com/knikolla/bg2feed
python-requires = >=3.7
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    bg2feed
